# pyspark_transform_registry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SOURCE_CODE_FIX_PLAN.md  TODO.md  VERSIONING_IMPLEMENTATION.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.cursor/: Dockerfile  environment.json
.github/: README.md  dependabot.yml
.github/workflows/: build.yml  code-quality.yml  security.yml  test.yml  tests.yml
examples/: README.md  complete_schema_example.py  demonstrate_mlflow_testing.py  example_schema_validation.py  requirements_example.py  simple_schema_example.py  source_inspection_example.py  transform_examples.py  versioning_example.py
old-xx/: __init__.py
src/pyspark_transform_registry/: __init__.py  __init___old.py  core.py  metadata.py  model_wrapper.py  requirements_analysis.py  runtime_validation.py  schema_constraints.py  signature_inference.py  validation.py  versioning.py
tests/: __init__.py  conftest.py  test_core.py  test_cross_version_compatibility.py  test_error_robustness.py  test_functional.py  test_loading_with_validation.py  test_metadata_fidelity.py  test_model_registry.py  test_multi_input.py  test_new_api_features.py  test_requirements_analysis.py  test_requirements_integration.py  test_runtime_validation.py  test_schema_constraints.py  test_schema_roundtrip.py  test_static_analysis.py  test_static_analysis_integration.py  test_transform_registry.py  test_versioning.py  test_versioning_integration.py
tests/fixtures/: complex_transform.py  (+2 more)
(+8 files in other folders)
