[project]
name = "pyspark-transform-registry"
version = "0.1.0"
description = "A PySpark transform registry with MLflow integration. Requires Java 17+ with security manager enabled."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=2.22.0",
    "pyspark<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]
