[project]
name = "pyspark-transform-registry"
version = "0.1.0"
description = "A PySpark transform registry with MLflow integration. Requires Java 17+ with security manager enabled."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "git-filter-repo>=2.47.0",
    "mlflow>=2.22.0",
    "pyspark<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "requests>=2.0.0",
    "pre-commit>=4.2.0",
]
