[project]
name = "pyspark-transform-registry"
version = "0.1.0"
description = "A PySpark transform registry with MLflow integration. Requires Java 17+ with security manager enabled."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.22.0",
    "pyspark<4.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "requests>=2.0.0",
    "pre-commit>=4.2.0",
]

[[tool.uv.index]]
name = "pyspark"
url = "https://pypi.org/simple"
default = true
